--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".Delivery.DeliveryDetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Delivery.DeliveryActivity"
+            android:exported="false" />
+        <activity
             android:name=".employee.AddEditEmployeeActivity"
             android:exported="false" />
         <activity
