--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".newCustomers.AddEditCustomersActivity"
+            android:exported="false" />
+        <activity
+            android:name=".newCustomers.CustomersActivity"
+            android:exported="false" />
+        <activity
             android:name=".Delivery.DeliveryDetailsActivity"
             android:exported="false" />
         <activity
